
syntax = "proto3";

package com.tanay.stocktrading;

option java_multiple_files = true;
option java_package = "com.tanay.stocktrading";
option java_outer_classname = "StockTradingProto";

service StockTradingService
{
    // Unary RPC -> get current stock price
    rpc getStockPrice(StockRequest) returns (StockResponse);

    // server streaming
    rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);
}

message StockRequest
{
    string stock_symbol = 1;
}

message StockResponse
{
    string stock_symbol = 1;
    double price = 2;
    string timestamp = 3;
}